# ELECT-MT

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
src/elect_mt/: cli.py  config.py  processor.py  watcher.py
src/elect_mt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_processing.py
