[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elect-mt"
version = "0.1.0"
description = "Automated image processing app (OpenCV + watchdog) with CI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ELECT-MT contributors" }]
dependencies = [
  "opencv-python==4.9.0.80",
  "watchdog==6.0.0",
  "numpy==1.26.4",
  "mediapipe==0.10.11",
  "ultralytics==8.4.12",
  "torch==2.10.0",
  "torchvision==0.25.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[project.scripts]
elect-mt = "elect_mt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
